parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT1
    IDOBJECT

Grammar

Rule 0     S' -> sourceOfaFile
Rule 1     sourceOfaFile -> stmts
Rule 2     stmts -> stmt stmts
Rule 3     stmts -> stmt
Rule 4     suite -> NEWLINE statement
Rule 5     suite -> newLineOrEmpty LBRACE stmts RBRACE newLineOrEmpty
Rule 6     stmt -> newLineOrEmpty statement
Rule 7     statement -> IF comparison suite
Rule 8     statement -> IF comparison suite ELSE suite
Rule 9     statement -> WHILE comparison suite
Rule 10    newLineOrEmpty -> NEWLINE newLineOrEmpty
Rule 11    newLineOrEmpty -> <empty>
Rule 12    statement -> FUNCTION ID LPAREN paramList RPAREN suite
Rule 13    statement -> lvalue EQUALS expression NEWLINE
Rule 14    statement -> RETURN expression NEWLINE
Rule 15    statement -> expression NEWLINE
Rule 16    paramList -> params
Rule 17    paramList -> <empty>
Rule 18    params -> ID COMMA params
Rule 19    params -> ID
Rule 20    comparison -> expression EQ expression
Rule 21    comparison -> expression NE expression
Rule 22    comparison -> expression GT expression
Rule 23    comparison -> expression GE expression
Rule 24    comparison -> expression LT expression
Rule 25    comparison -> expression LE expression
Rule 26    expression -> expression PLUS expression
Rule 27    expression -> expression MINUS expression
Rule 28    expression -> expression TIMES expression
Rule 29    expression -> expression DIVIDE expression
Rule 30    expression -> MINUS expression
Rule 31    expression -> LPAREN expression RPAREN
Rule 32    expression -> ID LPAREN argList RPAREN
Rule 33    argList -> args
Rule 34    argList -> <empty>
Rule 35    args -> expression COMMA args
Rule 36    args -> expression
Rule 37    expression -> NUMBER
Rule 38    expression -> lvalue
Rule 39    expression -> LITERAL
Rule 40    lvalue -> ID
Rule 41    lvalue -> ID LBRACKET indexList RBRACKET
Rule 42    indexList -> indexes
Rule 43    indexList -> <empty>
Rule 44    indexes -> expression COMMA indexes
Rule 45    indexes -> expression

Terminals, with rules where they appear

COMMA                : 18 35 44
COMMENT1             : 
DIVIDE               : 29
ELSE                 : 8
EQ                   : 20
EQUALS               : 13
FUNCTION             : 12
GE                   : 23
GT                   : 22
ID                   : 12 18 19 32 40 41
IDOBJECT             : 
IF                   : 7 8
LBRACE               : 5
LBRACKET             : 41
LE                   : 25
LITERAL              : 39
LPAREN               : 12 31 32
LT                   : 24
MINUS                : 27 30
NE                   : 21
NEWLINE              : 4 10 13 14 15
NUMBER               : 37
PLUS                 : 26
RBRACE               : 5
RBRACKET             : 41
RETURN               : 14
RPAREN               : 12 31 32
TIMES                : 28
WHILE                : 9
error                : 

Nonterminals, with rules where they appear

argList              : 32
args                 : 33 35
comparison           : 7 8 9
expression           : 13 14 15 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31 35 36 44 45
indexList            : 41
indexes              : 42 44
lvalue               : 13 38
newLineOrEmpty       : 5 5 6 10
paramList            : 12
params               : 16 18
sourceOfaFile        : 0
statement            : 4 6
stmt                 : 2 3
stmts                : 1 2 5
suite                : 7 8 8 9 12

Parsing method: LALR

state 0

    (0) S' -> . sourceOfaFile
    (1) sourceOfaFile -> . stmts
    (2) stmts -> . stmt stmts
    (3) stmts -> . stmt
    (6) stmt -> . newLineOrEmpty statement
    (10) newLineOrEmpty -> . NEWLINE newLineOrEmpty
    (11) newLineOrEmpty -> .

    NEWLINE         shift and go to state 5
    IF              reduce using rule 11 (newLineOrEmpty -> .)
    WHILE           reduce using rule 11 (newLineOrEmpty -> .)
    FUNCTION        reduce using rule 11 (newLineOrEmpty -> .)
    RETURN          reduce using rule 11 (newLineOrEmpty -> .)
    ID              reduce using rule 11 (newLineOrEmpty -> .)
    MINUS           reduce using rule 11 (newLineOrEmpty -> .)
    LPAREN          reduce using rule 11 (newLineOrEmpty -> .)
    NUMBER          reduce using rule 11 (newLineOrEmpty -> .)
    LITERAL         reduce using rule 11 (newLineOrEmpty -> .)

    sourceOfaFile                  shift and go to state 1
    stmts                          shift and go to state 2
    stmt                           shift and go to state 3
    newLineOrEmpty                 shift and go to state 4

state 1

    (0) S' -> sourceOfaFile .



state 2

    (1) sourceOfaFile -> stmts .

    $end            reduce using rule 1 (sourceOfaFile -> stmts .)


state 3

    (2) stmts -> stmt . stmts
    (3) stmts -> stmt .
    (2) stmts -> . stmt stmts
    (3) stmts -> . stmt
    (6) stmt -> . newLineOrEmpty statement
    (10) newLineOrEmpty -> . NEWLINE newLineOrEmpty
    (11) newLineOrEmpty -> .

    $end            reduce using rule 3 (stmts -> stmt .)
    RBRACE          reduce using rule 3 (stmts -> stmt .)
    NEWLINE         shift and go to state 5
    IF              reduce using rule 11 (newLineOrEmpty -> .)
    WHILE           reduce using rule 11 (newLineOrEmpty -> .)
    FUNCTION        reduce using rule 11 (newLineOrEmpty -> .)
    RETURN          reduce using rule 11 (newLineOrEmpty -> .)
    ID              reduce using rule 11 (newLineOrEmpty -> .)
    MINUS           reduce using rule 11 (newLineOrEmpty -> .)
    LPAREN          reduce using rule 11 (newLineOrEmpty -> .)
    NUMBER          reduce using rule 11 (newLineOrEmpty -> .)
    LITERAL         reduce using rule 11 (newLineOrEmpty -> .)

    stmt                           shift and go to state 3
    stmts                          shift and go to state 6
    newLineOrEmpty                 shift and go to state 4

state 4

    (6) stmt -> newLineOrEmpty . statement
    (7) statement -> . IF comparison suite
    (8) statement -> . IF comparison suite ELSE suite
    (9) statement -> . WHILE comparison suite
    (12) statement -> . FUNCTION ID LPAREN paramList RPAREN suite
    (13) statement -> . lvalue EQUALS expression NEWLINE
    (14) statement -> . RETURN expression NEWLINE
    (15) statement -> . expression NEWLINE
    (40) lvalue -> . ID
    (41) lvalue -> . ID LBRACKET indexList RBRACKET
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . MINUS expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . ID LPAREN argList RPAREN
    (37) expression -> . NUMBER
    (38) expression -> . lvalue
    (39) expression -> . LITERAL

    IF              shift and go to state 8
    WHILE           shift and go to state 9
    FUNCTION        shift and go to state 10
    RETURN          shift and go to state 15
    ID              shift and go to state 11
    MINUS           shift and go to state 16
    LPAREN          shift and go to state 12
    NUMBER          shift and go to state 17
    LITERAL         shift and go to state 18

    statement                      shift and go to state 7
    lvalue                         shift and go to state 13
    expression                     shift and go to state 14

state 5

    (10) newLineOrEmpty -> NEWLINE . newLineOrEmpty
    (10) newLineOrEmpty -> . NEWLINE newLineOrEmpty
    (11) newLineOrEmpty -> .

  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 5
    IF              reduce using rule 11 (newLineOrEmpty -> .)
    WHILE           reduce using rule 11 (newLineOrEmpty -> .)
    FUNCTION        reduce using rule 11 (newLineOrEmpty -> .)
    RETURN          reduce using rule 11 (newLineOrEmpty -> .)
    ID              reduce using rule 11 (newLineOrEmpty -> .)
    MINUS           reduce using rule 11 (newLineOrEmpty -> .)
    LPAREN          reduce using rule 11 (newLineOrEmpty -> .)
    NUMBER          reduce using rule 11 (newLineOrEmpty -> .)
    LITERAL         reduce using rule 11 (newLineOrEmpty -> .)
    LBRACE          reduce using rule 11 (newLineOrEmpty -> .)
    ELSE            reduce using rule 11 (newLineOrEmpty -> .)
    $end            reduce using rule 11 (newLineOrEmpty -> .)
    RBRACE          reduce using rule 11 (newLineOrEmpty -> .)

  ! NEWLINE         [ reduce using rule 11 (newLineOrEmpty -> .) ]

    newLineOrEmpty                 shift and go to state 19

state 6

    (2) stmts -> stmt stmts .

    $end            reduce using rule 2 (stmts -> stmt stmts .)
    RBRACE          reduce using rule 2 (stmts -> stmt stmts .)


state 7

    (6) stmt -> newLineOrEmpty statement .

    NEWLINE         reduce using rule 6 (stmt -> newLineOrEmpty statement .)
    IF              reduce using rule 6 (stmt -> newLineOrEmpty statement .)
    WHILE           reduce using rule 6 (stmt -> newLineOrEmpty statement .)
    FUNCTION        reduce using rule 6 (stmt -> newLineOrEmpty statement .)
    RETURN          reduce using rule 6 (stmt -> newLineOrEmpty statement .)
    ID              reduce using rule 6 (stmt -> newLineOrEmpty statement .)
    MINUS           reduce using rule 6 (stmt -> newLineOrEmpty statement .)
    LPAREN          reduce using rule 6 (stmt -> newLineOrEmpty statement .)
    NUMBER          reduce using rule 6 (stmt -> newLineOrEmpty statement .)
    LITERAL         reduce using rule 6 (stmt -> newLineOrEmpty statement .)
    $end            reduce using rule 6 (stmt -> newLineOrEmpty statement .)
    RBRACE          reduce using rule 6 (stmt -> newLineOrEmpty statement .)


state 8

    (7) statement -> IF . comparison suite
    (8) statement -> IF . comparison suite ELSE suite
    (20) comparison -> . expression EQ expression
    (21) comparison -> . expression NE expression
    (22) comparison -> . expression GT expression
    (23) comparison -> . expression GE expression
    (24) comparison -> . expression LT expression
    (25) comparison -> . expression LE expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . MINUS expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . ID LPAREN argList RPAREN
    (37) expression -> . NUMBER
    (38) expression -> . lvalue
    (39) expression -> . LITERAL
    (40) lvalue -> . ID
    (41) lvalue -> . ID LBRACKET indexList RBRACKET

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 12
    ID              shift and go to state 22
    NUMBER          shift and go to state 17
    LITERAL         shift and go to state 18

    comparison                     shift and go to state 20
    expression                     shift and go to state 21
    lvalue                         shift and go to state 23

state 9

    (9) statement -> WHILE . comparison suite
    (20) comparison -> . expression EQ expression
    (21) comparison -> . expression NE expression
    (22) comparison -> . expression GT expression
    (23) comparison -> . expression GE expression
    (24) comparison -> . expression LT expression
    (25) comparison -> . expression LE expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . MINUS expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . ID LPAREN argList RPAREN
    (37) expression -> . NUMBER
    (38) expression -> . lvalue
    (39) expression -> . LITERAL
    (40) lvalue -> . ID
    (41) lvalue -> . ID LBRACKET indexList RBRACKET

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 12
    ID              shift and go to state 22
    NUMBER          shift and go to state 17
    LITERAL         shift and go to state 18

    comparison                     shift and go to state 24
    expression                     shift and go to state 21
    lvalue                         shift and go to state 23

state 10

    (12) statement -> FUNCTION . ID LPAREN paramList RPAREN suite

    ID              shift and go to state 25


state 11

    (40) lvalue -> ID .
    (41) lvalue -> ID . LBRACKET indexList RBRACKET
    (32) expression -> ID . LPAREN argList RPAREN

    EQUALS          reduce using rule 40 (lvalue -> ID .)
    NEWLINE         reduce using rule 40 (lvalue -> ID .)
    PLUS            reduce using rule 40 (lvalue -> ID .)
    MINUS           reduce using rule 40 (lvalue -> ID .)
    TIMES           reduce using rule 40 (lvalue -> ID .)
    DIVIDE          reduce using rule 40 (lvalue -> ID .)
    LBRACKET        shift and go to state 26
    LPAREN          shift and go to state 27


state 12

    (31) expression -> LPAREN . expression RPAREN
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . MINUS expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . ID LPAREN argList RPAREN
    (37) expression -> . NUMBER
    (38) expression -> . lvalue
    (39) expression -> . LITERAL
    (40) lvalue -> . ID
    (41) lvalue -> . ID LBRACKET indexList RBRACKET

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 12
    ID              shift and go to state 22
    NUMBER          shift and go to state 17
    LITERAL         shift and go to state 18

    expression                     shift and go to state 28
    lvalue                         shift and go to state 23

state 13

    (13) statement -> lvalue . EQUALS expression NEWLINE
    (38) expression -> lvalue .

    EQUALS          shift and go to state 29
    NEWLINE         reduce using rule 38 (expression -> lvalue .)
    PLUS            reduce using rule 38 (expression -> lvalue .)
    MINUS           reduce using rule 38 (expression -> lvalue .)
    TIMES           reduce using rule 38 (expression -> lvalue .)
    DIVIDE          reduce using rule 38 (expression -> lvalue .)


state 14

    (15) statement -> expression . NEWLINE
    (26) expression -> expression . PLUS expression
    (27) expression -> expression . MINUS expression
    (28) expression -> expression . TIMES expression
    (29) expression -> expression . DIVIDE expression

    NEWLINE         shift and go to state 30
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34


state 15

    (14) statement -> RETURN . expression NEWLINE
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . MINUS expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . ID LPAREN argList RPAREN
    (37) expression -> . NUMBER
    (38) expression -> . lvalue
    (39) expression -> . LITERAL
    (40) lvalue -> . ID
    (41) lvalue -> . ID LBRACKET indexList RBRACKET

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 12
    ID              shift and go to state 22
    NUMBER          shift and go to state 17
    LITERAL         shift and go to state 18

    expression                     shift and go to state 35
    lvalue                         shift and go to state 23

state 16

    (30) expression -> MINUS . expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . MINUS expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . ID LPAREN argList RPAREN
    (37) expression -> . NUMBER
    (38) expression -> . lvalue
    (39) expression -> . LITERAL
    (40) lvalue -> . ID
    (41) lvalue -> . ID LBRACKET indexList RBRACKET

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 12
    ID              shift and go to state 22
    NUMBER          shift and go to state 17
    LITERAL         shift and go to state 18

    expression                     shift and go to state 36
    lvalue                         shift and go to state 23

state 17

    (37) expression -> NUMBER .

    NEWLINE         reduce using rule 37 (expression -> NUMBER .)
    PLUS            reduce using rule 37 (expression -> NUMBER .)
    MINUS           reduce using rule 37 (expression -> NUMBER .)
    TIMES           reduce using rule 37 (expression -> NUMBER .)
    DIVIDE          reduce using rule 37 (expression -> NUMBER .)
    EQ              reduce using rule 37 (expression -> NUMBER .)
    NE              reduce using rule 37 (expression -> NUMBER .)
    GT              reduce using rule 37 (expression -> NUMBER .)
    GE              reduce using rule 37 (expression -> NUMBER .)
    LT              reduce using rule 37 (expression -> NUMBER .)
    LE              reduce using rule 37 (expression -> NUMBER .)
    RPAREN          reduce using rule 37 (expression -> NUMBER .)
    COMMA           reduce using rule 37 (expression -> NUMBER .)
    RBRACKET        reduce using rule 37 (expression -> NUMBER .)
    LBRACE          reduce using rule 37 (expression -> NUMBER .)


state 18

    (39) expression -> LITERAL .

    NEWLINE         reduce using rule 39 (expression -> LITERAL .)
    PLUS            reduce using rule 39 (expression -> LITERAL .)
    MINUS           reduce using rule 39 (expression -> LITERAL .)
    TIMES           reduce using rule 39 (expression -> LITERAL .)
    DIVIDE          reduce using rule 39 (expression -> LITERAL .)
    EQ              reduce using rule 39 (expression -> LITERAL .)
    NE              reduce using rule 39 (expression -> LITERAL .)
    GT              reduce using rule 39 (expression -> LITERAL .)
    GE              reduce using rule 39 (expression -> LITERAL .)
    LT              reduce using rule 39 (expression -> LITERAL .)
    LE              reduce using rule 39 (expression -> LITERAL .)
    RPAREN          reduce using rule 39 (expression -> LITERAL .)
    COMMA           reduce using rule 39 (expression -> LITERAL .)
    RBRACKET        reduce using rule 39 (expression -> LITERAL .)
    LBRACE          reduce using rule 39 (expression -> LITERAL .)


state 19

    (10) newLineOrEmpty -> NEWLINE newLineOrEmpty .

    IF              reduce using rule 10 (newLineOrEmpty -> NEWLINE newLineOrEmpty .)
    WHILE           reduce using rule 10 (newLineOrEmpty -> NEWLINE newLineOrEmpty .)
    FUNCTION        reduce using rule 10 (newLineOrEmpty -> NEWLINE newLineOrEmpty .)
    RETURN          reduce using rule 10 (newLineOrEmpty -> NEWLINE newLineOrEmpty .)
    ID              reduce using rule 10 (newLineOrEmpty -> NEWLINE newLineOrEmpty .)
    MINUS           reduce using rule 10 (newLineOrEmpty -> NEWLINE newLineOrEmpty .)
    LPAREN          reduce using rule 10 (newLineOrEmpty -> NEWLINE newLineOrEmpty .)
    NUMBER          reduce using rule 10 (newLineOrEmpty -> NEWLINE newLineOrEmpty .)
    LITERAL         reduce using rule 10 (newLineOrEmpty -> NEWLINE newLineOrEmpty .)
    LBRACE          reduce using rule 10 (newLineOrEmpty -> NEWLINE newLineOrEmpty .)
    ELSE            reduce using rule 10 (newLineOrEmpty -> NEWLINE newLineOrEmpty .)
    NEWLINE         reduce using rule 10 (newLineOrEmpty -> NEWLINE newLineOrEmpty .)
    $end            reduce using rule 10 (newLineOrEmpty -> NEWLINE newLineOrEmpty .)
    RBRACE          reduce using rule 10 (newLineOrEmpty -> NEWLINE newLineOrEmpty .)


state 20

    (7) statement -> IF comparison . suite
    (8) statement -> IF comparison . suite ELSE suite
    (4) suite -> . NEWLINE statement
    (5) suite -> . newLineOrEmpty LBRACE stmts RBRACE newLineOrEmpty
    (10) newLineOrEmpty -> . NEWLINE newLineOrEmpty
    (11) newLineOrEmpty -> .

    NEWLINE         shift and go to state 38
    LBRACE          reduce using rule 11 (newLineOrEmpty -> .)

    suite                          shift and go to state 37
    newLineOrEmpty                 shift and go to state 39

state 21

    (20) comparison -> expression . EQ expression
    (21) comparison -> expression . NE expression
    (22) comparison -> expression . GT expression
    (23) comparison -> expression . GE expression
    (24) comparison -> expression . LT expression
    (25) comparison -> expression . LE expression
    (26) expression -> expression . PLUS expression
    (27) expression -> expression . MINUS expression
    (28) expression -> expression . TIMES expression
    (29) expression -> expression . DIVIDE expression

    EQ              shift and go to state 40
    NE              shift and go to state 41
    GT              shift and go to state 42
    GE              shift and go to state 43
    LT              shift and go to state 44
    LE              shift and go to state 45
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34


state 22

    (32) expression -> ID . LPAREN argList RPAREN
    (40) lvalue -> ID .
    (41) lvalue -> ID . LBRACKET indexList RBRACKET

    LPAREN          shift and go to state 27
    EQ              reduce using rule 40 (lvalue -> ID .)
    NE              reduce using rule 40 (lvalue -> ID .)
    GT              reduce using rule 40 (lvalue -> ID .)
    GE              reduce using rule 40 (lvalue -> ID .)
    LT              reduce using rule 40 (lvalue -> ID .)
    LE              reduce using rule 40 (lvalue -> ID .)
    PLUS            reduce using rule 40 (lvalue -> ID .)
    MINUS           reduce using rule 40 (lvalue -> ID .)
    TIMES           reduce using rule 40 (lvalue -> ID .)
    DIVIDE          reduce using rule 40 (lvalue -> ID .)
    RPAREN          reduce using rule 40 (lvalue -> ID .)
    NEWLINE         reduce using rule 40 (lvalue -> ID .)
    COMMA           reduce using rule 40 (lvalue -> ID .)
    RBRACKET        reduce using rule 40 (lvalue -> ID .)
    LBRACE          reduce using rule 40 (lvalue -> ID .)
    LBRACKET        shift and go to state 26


state 23

    (38) expression -> lvalue .
